--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,6 +42,12 @@ div#qrcode {
     width: 60%;
     font-size: 1.5vw;
 }
+[class*="btn-songrank"] {
+    color: white;
+    width: 2em;
+    font-size: 1.5vw;
+
+}
 
 h1 {
     font-size: 5vw;
