--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,11 @@ figure {
     overflow: hidden;
 }
 
+[class*="textbox"] {
+    margin: auto;
+    width: 55%;
+}
+
 [class*="container"] {
     width: 80%;
     margin: auto;
